--- a/.render.yaml
+++ b/.render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r backend/requirements.txt
-    startCommand: bash start.sh  
+    startCommand: bash backend/start.sh
     envVars:
       - key: WHISPER_MODEL
         value: base
